--- a/index.html
+++ b/index.html
@@ -1,33 +1,3 @@
-<!-- 
-
-      / \
-    / _ \
-   | / \ |
-   ||   || _______
-   ||   || |\     \
-   ||   || ||\     \
-   ||   || || \    |
-   ||   || ||  \__/
-   ||   || ||   ||
-    \\_/ \_/ \_//
-   /   _     _   \
-  /               \
-  |    O     O    |
-  |   \  ___  /   |                           
- /     \ \_/ /     \
-/  -----  |  --\    \
-|     \__/|\__/ \   |
-\       |_|_|       /
- \_____       _____/
-       \     /
-       |     |
-
-************************************************************************
-    THANKS FOR LOOKING AT THE SOURCE CODE <3 HERE IS A CUTE RABBIT!! 
-    DO DROP A MESSAGE! WOULD LOVE TO CHAT :)
-************************************************************************
- -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -55,7 +25,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="dist/css/main.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Software Developer || Cyber Security Enthusiast</title>
+    <title>Full Stack GIS Developer</title>
   </head>
   <body>
     <header id="home" class="header">
@@ -63,7 +33,6 @@
         <nav id="navbar" class="navbar top">
           <div class="container">
             <div class="navbar__content">
-              <h1><a class="navbar__content--logo" href="index.html">D.</a></h1>
               <ul class="brackets-animation">
                 <li>
                   <a href="#home"
@@ -103,14 +72,12 @@
         <div class="showcase">
           <div class="showcase__content">
             <h1 class="heading-primary">
-              <span class="heading-primary--name">I am Dhvani </span>
+              <span class="heading-primary--name">I am Tenzine </span>
               <span class="heading-primary--sub"
-                >Aspiring Software Developer &nbsp; &amp; &nbsp; Cyber Security
-                Enthusiast</span
+                >Aspiring Software Developer &nbsp; &amp; &nbsp; An Urban GIS Developer</span
               >
               <span class="heading-primary--description"
-                >Final year Engineering Student at the University of
-                Auckland</span
+                >GIS Analyst at Geomatics Division, Ministry of Infrastructure and Transport</span
               >
             </h1>
           </div>
